# vulkancompute

./: .clangd  CMakeLists.txt  makefile  shell.nix
src/: main.cpp  renderer.cppm  validation.cpp  validation.hpp  vk_mem_alloc.cpp  volk.cpp
